# Phoenix

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/camera/: BUILDING.md  Cargo.toml
crates/camera/src/: camera.rs  handler.rs  lib.rs
crates/camera/src/backends/: mod.rs  noop.rs  opencv.rs  openiris.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
